# praxis

./: .editorconfig  .gitignore  Dockerfile  LICENSE  PLAN.md  PLAN_TOOL_CALLING_FIX.md  README.md  api.py  archiver.py  archivist.py  builders.py  cli.py  compose.ARM.yml  compose.yml  eval.py  eval.sh  evaluation.py  hive.py  hivetest.py  hivetestex.py  hivetestsync.py  interface.py  launch  main.py  make-venv.sh  optimizers.py  package-lock.json  package.json  plot.py  prompt.md  pyproject.toml  pytest.ini  result.txt  run.py  run.py.backup  run_alpha.py  serve.py  server.py  setup-cuda.sh  setup.py  (+8 more)
adapters/: __init__.py  gun.mjs  gun.py  package-lock.json
archive/: adamg_failure.py  cat.py  causal_vae.py  causal_vae_1.py  cevae.py  chunked_nano.py  compression.py  compressor.py  curve.py  curve_shifted.py  custom_lstm.py  custom_rnn_triton.py  ds.py  failed_controller.py  formatter.py  hasher.py  hopfield.py  hyper_connections.py  infini_attention.py  invalid_hivemind_decoder.py  mid_moe.py  mlp_mixer.py  nanofft.py  neural_controller.py  neural_module.py  o_1.py  plot_activations.py  praxis_episodic_memory.py  reasoning_complex.py  reasoning_super_complex.py  rope.py  scatter.py  scatter_1.py  single_head_gated_attn.py  smear.py  soda.py  sparse_query.py  spiking_sensor.py  symbolic_logic.py  tfree.py  (+4 more)
axis/: README.md  export_presets.cfg  icon.png.import  project.godot
docs/: activations.md  attention.md  blocks.md  cli.md  compression.md  controllers.md  data.md  decoders.md  dense.md  dynamics_integration.md  embeddings.md  encoders.md  encoding.md  exponentials.md  goad.md  halting.md  heads.md  index.md  integrations.md  losses.md  memory.md  mono.md  normalization.md  optimizers.md  orchestration.md  policies.md  prismatic.md  quantum_echoes.md  recurrent.md  residuals.md  routers.md  sorting.md  strategies.md  web.md  width.md  wrappers.md
environments/: README.md  dev.yml
eval/: __init__.py  run.py
evaluation/: __init__.py  run.py
experiments/: .gitignore  README.md  alpha.yml  beta.yml  gpt2-1.yml
flow/: AnnotationNode.jsx  App.js  App.jsx  ButtonEdge.jsx  CircleNode.jsx  CustomNode.jsx  ResizerNode.jsx  ToolbarNode.jsx  index.css  index.html  index.js
integrations/: README.md
integrations/gun/: README.md  __init__.py  gun.mjs  main.py  package.json  pyproject.toml  spec.yaml
integrations/neurallambda/: README.md  __init__.py  main.py  neural.py  pyproject.toml  spec.yaml
integrations/tokenmonster/: __init__.py  main.py  pyproject.toml  spec.yaml
misc/: ScaledRMSNorm.py  bad_moe.py  builders.py  detectRepetition.py  episodic_memory.py  git.py  hivemind-batchtensor-bug.py  hivemind-cli-background-process.py  hivemind-cli-thread.py  hivemind_server.py  infini_attention.py  invalid_hivemind_decoder.py  knn_memory.py  l-mul.py  mid_expert.py  mid_moe.py  plot_activations.py  smear.py  synthetic-persona-chat-hf.py  synthetic-persona-chat.py  unused_attention.py  unused_memory.py  unused_predictor.py  unused_router.py
next/: architecture_separation.md  blind_election.md  business_cards.md  deep_recurrent_cost.md  dropoff.md  entry_velocity.md  exponentials.md  forced_computation.md  ghostmin.md  grounding.md  harmonic_fingerprint.md  harmonic_koopman.md  harmonic_memory_velocity.md  harmonic_seeding.md  harmony.md  hash_gated_anchor.md  homeostatic_engagement.md  information_density.md  information_geometry.md  integration_backlog.md  kb_spider.md  linear_solve.md  lottery_engineering.md  memory_bases.md  mixture_of_widths.md  mtp_curve.md  multirate_vote.md  music_box.md  observer_effect.md  observer_frequency.md  observer_grounding.md  observer_resonance.md  oscillatory_axes.md  peer_bridge.md  pi_index.md  predictive_memory.md  prismatic.md  quantum_echoes.md  recurrent_depth_concentration.md  rlct_landscape.md  (+15 more)
praxis/: __init__.py  configuration.py  configuration_praxis.py  docs.py  log_noise.py  modeling.py  modeling_praxis.py  reinforcement.py  tokenizer.py  tokenizer_new.py  tokenizer_old.py  tokenizer_praxis.py  utils.py
proofs/: ghostmax_phase_coupling.md  harmonic_pi.md
publication/: main.tex
research/: .gitignore  .latexmkrc  body.tex  citations.bib  conjectures.tex  evolution.tex  main.tex  strands.tex
staging/: PROMPT.md  README.md  aaren.py  backprop.py  blt_ngrams_approx.py  blt_ngrams_full.py  browser_tabs.py  causal_vae_1.py  curve_s.py  curve_u.py  diff_po.py  failed_controller.py  fwd_mode_autodiff.py  graph copy.py  infini_attention.py  invalid_hivemind_decoder.py  l-mul.py  ln_scaling.py  lru.py  memorizing_transformer.py  nanofft.py  prospective_config.py  reasoning.py  reproduce_bug.py  resu.py  scatter.py  serve.py  spiking.py  tesla-ball-logo.html  test_dashboard.py  test_flex_attention.py  test_persona_builder.py  unused_tokenizer.py  unused_tokenmonster.py  vae.py  visualize_dropout_pattern.py  wandb_cleanup.py
static/: app.js  chat.md  styles.css  tesla-animation.js
templates/: index.01e76c1d.js  index.01e76c1d.js.map  index.6805241a.css  index.6805241a.css.map  index.8c137338.css  index.8c137338.css.map  index.ca5e0e7e.js  index.ca5e0e7e.js.map  index.html
tests/: compose.mono_forward.test.yml  compose.mono_forward_gpu.test.yml  conftest.py  (+97 more)
(+1036 files in other folders)
