[build-system]
requires = ["wheel", "cmake", "setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis"
version = "0.2.0"
description = "for all, none"
authors = [{ name = "Ryan Brooks", email = "ryan@src.eco" }]
urls = { label = "https://src.eco" }
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "asciichartpy",
    "attrs",
    "blessed",
    "cmake",
    "datasets",
    "evaluate",
    "flask",
    "flask-cors",
    "flask-socketio",
    "isort",
    # "lighteval[math]",
    "lightning",
    "lsprotocol",
    "matplotlib",
    "cut-cross-entropy @ git+https://github.com/apple/ml-cross-entropy",
    "networkx",
    "pygls",
    "psutil",
    "pytest",
    "pytorch_optimizer==3.5.1",
    "setuptools",
    "torch",
    "torcheval",
    "transformers",
    "watchdog",
    "pyyaml",
    "werkzeug",
    "wheel",
    "xformers",
    "zstandard",
]

[tool.setuptools]
packages = ["praxis"]

[tool.pytest.ini_options]
# Exclude staging directory from test collection (manual demonstration scripts)
norecursedirs = ["staging", ".git", ".venv", "build", "dist"]
testpaths = ["tests"]
