[build-system]
requires = ["wheel", "cmake", "setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis"
version = "0.2.0"
description = "for all, home"
authors = [{ name = "Ryan J. Brooks", email = "ryan@src.eco" }]
urls = { label = "https://src.eco" }
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "asciichartpy",
    "attrs",
    "blessed",
    "cmake",
    "datasets",
    "evaluate",
    "flask",
    "flask-cors",
    "flask-socketio",
    "isort",
    # "lighteval[math]",
    "lightning",
    "lsprotocol",
    "matplotlib",
    "mpmath",
    "networkx",
    "playwright",
    "pygls",
    "psutil",
    "pytest",
    "pytorch_optimizer",
    # "pytorch_optimizer==3.5.1",
    "setuptools",
    "torch",
    "torcheval",
    "transformers",
    "watchdog",
    "pyyaml",
    "werkzeug",
    "wheel",
    "xformers",
    "zstandard",
]

[project.optional-dependencies]
# Ray is only required for --trainer-type mono_forward. It is kept as
# an optional extra rather than a hard dependency because Ray publishes no
# wheels for Python >= 3.14, and many Praxis contributors are on
# bleeding-edge distributions (e.g. Arch) where python3.14 is the system
# Python version.
ray = ["ray[default]>=2.30"]

[tool.setuptools]
packages = ["praxis"]

[tool.pytest.ini_options]
# Exclude staging directory from test collection (manual demonstration scripts)
norecursedirs = ["staging", ".git", ".venv", "build", "dist"]
testpaths = ["tests"]
